--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_height="20dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_search"
-            android:tint="@color/colorSearchIcon"
+            app:tint="@color/colorSearchIcon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
