--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -127,10 +127,10 @@
                 android:src="@drawable/ic_delete"
                 android:visibility="gone"
                 android:padding="3dp"
-                app:tint="@color/colorWhite"
                 android:background="@drawable/background_delete"
                 app:layout_constraintEnd_toEndOf="@+id/imageNote"
-                app:layout_constraintTop_toTopOf="@+id/imageNote" />
+                app:layout_constraintTop_toTopOf="@+id/imageNote"
+                app:tint="@color/colorWhite" />
 
             <TextView
                 android:id="@+id/txtWebUrl"
@@ -167,7 +167,7 @@
                 android:layout_marginBottom="15dp"
                 android:background="@null"
                 android:gravity="top"
-                android:hint="Type note here...."
+                android:hint="Type note here..."
                 android:importantForAutofill="no"
                 android:includeFontPadding="false"
                 android:inputType="textMultiLine"
@@ -183,4 +183,57 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
     <include layout="@layout/layout_miscellaneous" />
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        style="@style/Widget.MaterialComponents.BottomAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:backgroundTint="@color/colorQuickActionBackground"
+        app:fabAlignmentMode="end"
+        app:fabCradleMargin="8dp"
+        app:hideOnScroll="true"
+        app:fabCradleRoundedCornerRadius="8dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="@color/colorAccent"
+        app:fabSize="normal"
+        app:layout_anchor="@id/bottomAppBar" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_addImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="40dp"
+        app:fabSize="mini"
+        android:visibility="invisible"
+        android:src="@drawable/ic_image"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_addUrl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="155dp"
+        android:layout_marginEnd="40dp"
+        app:fabSize="mini"
+        android:visibility="invisible"
+        android:src="@drawable/ic_web_link"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_del"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="210dp"
+        android:layout_marginEnd="40dp"
+        app:fabSize="mini"
+        android:visibility="invisible"
+        android:src="@drawable/ic_delete"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
