--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -113,6 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:visibility="gone"
+                android:transitionName="imageNote"
                 android:layout_marginTop="15dp"
                 android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
