--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -13,6 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?selectableItemBackground"
         android:background="@drawable/background_note">
 
         <com.makeramen.roundedimageview.RoundedImageView
@@ -21,6 +24,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:visibility="visible"
+            android:transitionName="imageNote"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
