--- a/app/src/main/res/menu/main_note.xml
+++ b/app/src/main/res/menu/main_note.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/main_menu_deleteAll"
+        android:title="노트 전체 삭제"
+        app:showAsAction="never"
+        />
 </menu>
