--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -39,6 +39,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:includeFontPadding="false"
+            android:background="@drawable/select_note"
             android:text="@{model.title}"
             android:textColor="@color/colorWhite"
             android:textSize="16dp"
