--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -16,7 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="2dp"
-            android:src="@drawable/ic_done"
+            android:visibility="gone"
+            android:src="@drawable/background_note_select"
             app:layout_constraintBottom_toTopOf="@+id/layoutNote"
             app:layout_constraintEnd_toStartOf="@+id/layoutNote"
             app:layout_constraintStart_toStartOf="@+id/layoutNote"
