--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -109,13 +109,14 @@
 
             <ImageView
                 android:id="@+id/imageNote"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:visibility="gone"
-                android:transitionName="imageNote"
                 android:layout_marginTop="15dp"
                 android:adjustViewBounds="true"
+                android:transitionName="imageNote"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/inputNoteSubtitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/inputNoteSubtitle" />
 
@@ -140,9 +141,10 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:visibility="gone"
                 android:autoLink="web"
                 android:textSize="13sp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/inputNoteSubtitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageNote" />
 
