--- a/app/src/main/res/menu/create_note.xml
+++ b/app/src/main/res/menu/create_note.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/main_menu_deleteAll"
+        android:id="@+id/main_menu_edit"
         android:title="편집"
         app:showAsAction="never"
         />
