--- a/app/src/main/res/menu/main_note.xml
+++ b/app/src/main/res/menu/main_note.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/main_menu_selectAll"
-        android:title="노트 전체 선택"
+        android:id="@+id/main_menu_edit"
+        android:title="편집"
+        app:showAsAction="never"
+        />
+
+    <item
+        android:id="@+id/main_menu_about"
+        android:title="About"
         app:showAsAction="never"
         />
 </menu>
