--- a/app/src/main/res/layout/layout_miscellaneous.xml
+++ b/app/src/main/res/layout/layout_miscellaneous.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_miscellaneous"
-    app:behavior_peekHeight="25dp"
+    app:behavior_peekHeight="30dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:text="Miscellaneous"
+        android:text="Decoration"
         android:textColor="@color/colorWhite"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -101,15 +101,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="PickColor"
-            android:textColor="@color/colorWhite"
+            android:text="Pick Color"
+            android:textColor="@color/colorTextHint"
             android:textSize="13sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/colorTextHint"
+            app:layout_constraintEnd_toEndOf="@+id/textView4"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -122,8 +134,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginStart="24dp"
             android:src="@drawable/ic_image"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -156,8 +168,8 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginStart="24dp"
             android:src="@drawable/ic_web_link"
             app:tint="@color/colorIcons"
@@ -190,8 +202,8 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginStart="24dp"
             android:src="@drawable/ic_delete"
             app:layout_constraintBottom_toBottomOf="parent"
