--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppDarkTheme" parent="Theme.MaterialComponents.DayNight">
+    <style name="AppDarkTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
 </resources>
