--- a/app/src/main/res/layout/layout_decorations.xml
+++ b/app/src/main/res/layout/layout_decorations.xml
@@ -38,7 +38,7 @@
             android:id="@+id/imageColorDefault"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/background_note_color_defualt"
@@ -104,13 +104,13 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:text="Pick Color"
             android:textColor="@color/colorTextHint"
             android:textSize="13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageColorBlack"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
