--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#292929</color>
-    <color name="colorPrimaryDark">#292929</color>
+    <color name="colorPrimary">#D6D6D6</color>
+    <color name="colorPrimaryDark">#D6D6D6</color>
+    <color name="colorDarkPrimary">#292929</color>
+    <color name="colorDarkPrimaryDark">#292929</color>
     <color name="colorAccent">#FDBE3B</color>
-    <color name="colorDarkPrimary">#D6D6D6</color>
-    <color name="colorDarkPrimaryDark">#D6D6D6</color>
-    <color name="colorDarkAccent">#FDBE3B</color>
     <color name="colorWhite">#FFFFFF</color>
-        <color name="colorSearchIcon">#DBDBDB</color>
+    <color name="colorSearchIcon">#DBDBDB</color>
     <color name="colorTextHint">#7B7B7B</color>
     <color name="colorQuickActionBackground">#2F2D2E</color>
     <color name="colorIcons">#A4A4A4</color>
@@ -15,7 +14,7 @@
     <color name="colorDefaultNoteColor">#333333</color>
     <color name="colorNoteSubtitleText">#FAFAFA</color>
     <color name="colorDecorationsBackground">#1F1F1F</color>
-    <color name="colorNoteYellow">#FDBE3B</color>
+    <color name="colorNoteYellow">#FEBD3D</color>
     <color name="colorNoteRed">#FF4842</color>
     <color name="colorNoteBlue">#3A52FC</color>
     <color name="colorNoteBlack">#000000</color>
