--- a/app/src/main/res/layout/layout_theme_select.xml
+++ b/app/src/main/res/layout/layout_theme_select.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutAddUrlContainer"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutThemeContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -15,17 +15,17 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_web_link"
-        app:tint="@color/colorWhite"
+        android:src="@drawable/ic_darkmode_white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/colorWhite" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="AddURL"
+        android:text="Theme"
         android:textColor="@color/colorWhite"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -34,40 +34,23 @@
         app:layout_constraintStart_toEndOf="@+id/imageAddUrl"
         app:layout_constraintTop_toTopOf="@+id/imageAddUrl" />
 
-    <EditText
-        android:id="@+id/inputUrl"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@null"
-        android:gravity="center_vertical"
-        android:hint="Enter URL"
-        android:imeOptions="actionDone"
-        android:importantForAutofill="no"
-        android:inputType="textUri"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorTextHint"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/textAdd"
+        android:id="@+id/btn_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:padding="8dp"
-        android:text="ADD"
+        android:text="CONFIRM"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputUrl" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <TextView
-        android:id="@+id/textCancel"
+        android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -76,7 +59,36 @@
         android:text="CANCEL"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textAdd"
-        app:layout_constraintTop_toBottomOf="@+id/inputUrl" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_ok" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+        <RadioButton
+            android:id="@+id/rdo_white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="WhiteMode" />
+
+        <RadioButton
+            android:id="@+id/rdo_dark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="DarkMode" />
+
+        <RadioButton
+            android:id="@+id/rdo_default"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="System Default" />
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
