--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/mainTop_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorDarkPrimary"
+    android:background="@color/colorPrimaryDark"
     tools:context=".ui.MainActivity">
 
     <TextView
