--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D6D6D6</color>
-    <color name="colorPrimaryDark">#D6D6D6</color>
+    <color name="colorPrimary">#292929</color>
+    <color name="colorPrimaryDark">#292929</color>
     <color name="colorAccent">#FDBE3B</color>
-    <color name="colorWhite">#000000</color>
-    <color name="colorSearchIcon">#242424</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorSearchIcon">#DBDBDB</color>
     <color name="colorTextHint">#7B7B7B</color>
-    <color name="colorQuickActionBackground">#D1C9CD</color>
+    <color name="colorQuickActionBackground">#2F2D2E</color>
     <color name="colorIcons">#A4A4A4</color>
     <color name="colorTextSubtitle">#CECECE</color>
-    <color name="colorDefaultNoteColor">#ECECEC</color>
+    <color name="colorDefaultNoteColor">#333333</color>
     <color name="colorNoteSubtitleText">#C8C8C8</color>
-    <color name="colorDecorationsBackground">#E0E0E0</color>
+    <color name="colorDecorationsBackground">#1F1F1F</color>
     <color name="colorNoteYellow">#FEBD3D</color>
     <color name="colorNoteRed">#FF4842</color>
     <color name="colorNoteBlue">#3A52FC</color>
     <color name="colorNoteBlack">#000000</color>
     <color name="colorDelete">#FF4842</color>
-    <color name="colorSearchBackground">#CCCCCC</color>
+    <color name="colorSearchBackground">#333333</color>
 </resources>
