fix theme color.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,13 +5,13 @@
     <color name="colorAccent">#FDBE3B</color>
     <color name="colorWhite">#000000</color>
     <color name="colorSearchIcon">#242424</color>
-    <color name="colorTextHint">#7B7B7B</color>
+    <color name="colorTextHint">#858585</color>
     <color name="colorQuickActionBackground">#D1C9CD</color>
-    <color name="colorIcons">#A4A4A4</color>
-    <color name="colorTextSubtitle">#CECECE</color>
-    <color name="colorDefaultNoteColor">#ECECEC</color>
-    <color name="colorNoteSubtitleText">#C8C8C8</color>
-    <color name="colorDecorationsBackground">#E0E0E0</color>
+    <color name="colorIcons">#5C5C5C</color>
+    <color name="colorTextSubtitle">#303030</color>
+    <color name="colorNoteSubtitleText">#383838</color>
+    <color name="colorDecorationsBackground">#F2F2F2</color>
+    <color name="colorNoteDefaultColor">#ECECEC</color>
     <color name="colorNoteYellow">#FEBD3D</color>
     <color name="colorNoteRed">#FF4842</color>
     <color name="colorNoteBlue">#3A52FC</color>
