--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -17,11 +17,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
-            android:background="@color/colorDefaultNoteColor"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?selectableItemBackground"
             android:animateLayoutChanges="true"
+            app:cardBackgroundColor="@color/colorNoteDefaultColor"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
