--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,12 +6,12 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorSearchIcon">#DBDBDB</color>
     <color name="colorTextHint">#7B7B7B</color>
+    <color name="colorTextSubtitle">#CECECE</color>
     <color name="colorQuickActionBackground">#2F2D2E</color>
     <color name="colorIcons">#A4A4A4</color>
-    <color name="colorTextSubtitle">#CECECE</color>
-    <color name="colorDefaultNoteColor">#333333</color>
     <color name="colorNoteSubtitleText">#C8C8C8</color>
     <color name="colorDecorationsBackground">#1F1F1F</color>
+    <color name="colorNoteDefaultColor">#333333</color>
     <color name="colorNoteYellow">#FEBD3D</color>
     <color name="colorNoteRed">#FF4842</color>
     <color name="colorNoteBlue">#3A52FC</color>
