--- a/app/src/main/res/layout/item_container_label.xml
+++ b/app/src/main/res/layout/item_container_label.xml
@@ -25,7 +25,7 @@
             app:srcCompat="@drawable/ic_label" />
 
         <CheckedTextView
-            android:id="@+id/checkedTextView"
+            android:id="@+id/txtLabelTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
