fix select Label (#4).

--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -16,11 +16,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:animateLayoutChanges="true"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?selectableItemBackground"
-            android:animateLayoutChanges="true"
             app:cardBackgroundColor="@color/colorNoteDefaultColor"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -69,16 +71,16 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="12dp"
+                    android:ellipsize="end"
                     android:includeFontPadding="false"
+                    android:maxLines="3"
                     android:text="@{model.subtitle}"
                     android:textColor="@color/colorNoteSubtitleText"
                     android:textSize="14dp"
-                    android:maxLines="3"
-                    android:ellipsize="end"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtTitle"
-                    tools:text="LoremIpsum"/>
+                    tools:text="LoremIpsum" />
 
                 <TextView
                     android:id="@+id/txtDateTime"
@@ -116,10 +118,10 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/background_note_subject"
-                    android:text="@{model.label}"
-                    android:textSize="12dp"
                     android:ellipsize="end"
                     android:singleLine="true"
+                    android:text="@{model.label}"
+                    android:textSize="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/txtDateTime"
                     app:layout_constraintHorizontal_bias="0.0"
